--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <!-- Container for the Find Your Team component -->
   <div id="team-container">
     <div id="prompt">
-      <h1>🕵️‍♂️ ✨ Find Your Team! 🎉🤗</h1>
-      <input type="text" id="name-input" placeholder="Enter your name" />
-      <button id="submit-btn" onclick="start()">Submit</button>
-    </div>
+  <h1 class="prep-title">🚀 PREP: Find Your Team! 🎯</h1>
+  <input type="text" id="name-input" placeholder="Enter your name" />
+  <button id="submit-btn" onclick="start()">Submit</button>
+</div>
 
 
     <div id="choice" style="display:none;">
