--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <!-- Container for the Find Your Team component -->
   <div id="team-container">
     <div id="prompt">
-  <h1 class="prep-title">🚀 PREP: Find Your Team! 🎯</h1>
+  <h1 class="prep-title">
+    <span class="prep-highlight">PREP</span> | HSS - Find Your Team! 🔍💙
+  </h1>
   <input type="text" id="name-input" placeholder="Enter your name" />
   <button id="submit-btn" onclick="start()">Submit</button>
 </div>
