--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="team-container">
     <div id="prompt">
   <h1 class="prep-title">
-    <span class="prep-highlight">PREP</span> | HSS - Find Your Team! 🔍💙
+    <span class="prep-highlight">PREP</span> HSS - Find Your Team! 🔍💙
   </h1>
   <input type="text" id="name-input" placeholder="Enter your name" />
   <button id="submit-btn" onclick="start()">Submit</button>
